--- a/backend/canim_ecommerce/src/main/resources/application.properties
+++ b/backend/canim_ecommerce/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=canim_ecommerce
+
+server.port=8000
+server.servlet.context-path=/canim_ecommerce
+
+spring.datasource.url=jdbc:mysql://db:3306/canim_ecommerce?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
