--- a/backend/canim_ecommerce/docker-compose.yml
+++ b/backend/canim_ecommerce/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: mysql:8.0
@@ -12,26 +10,14 @@ services:
       - "3307:3306"             
     volumes:
       - db_data:/var/lib/mysql
+      - ./db/migration:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  app:
-    build: .
-    container_name: canim_ecommerce_app
-    restart: on-failure
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - "8000:8000"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/canim_ecommerce?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_JPA_SHOW_SQL: "true"
 volumes:
   db_data:
+
+ 
