--- a/backend/canim_ecommerce/pom.xml
+++ b/backend/canim_ecommerce/pom.xml
@@ -32,6 +32,12 @@
         <org.lombok.version>1.18.36</org.lombok.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -94,6 +100,16 @@
             <version>${org.lombok.version}</version>  
             <optional>true</optional>  
             <scope>provided</scope>  
+        </dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
         </dependency>
 	</dependencies>
 	<build>
