--- a/backend/canim_ecommerce/src/main/resources/application.properties
+++ b/backend/canim_ecommerce/src/main/resources/application.properties
@@ -3,11 +3,18 @@ spring.application.name=canim_ecommerce
 server.port=8000
 server.servlet.context-path=/canim_ecommerce
 
-spring.datasource.url=jdbc:mysql://db:3306/canim_ecommerce?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/canim_ecommerce?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.flyway.url=jdbc:mysql://localhost:3307/canim_ecommerce
+spring.flyway.user=root
+spring.flyway.password=root
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
 
