chore(deps): update pom.xml withnimbus-jose-jwt dependency

--- a/backend/canim_ecommerce/pom.xml
+++ b/backend/canim_ecommerce/pom.xml
@@ -78,6 +78,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- Jwt -->
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>9.41.2</version>
+		</dependency>
+
 		<!-- OAuth2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
