--- a/backend/canim_ecommerce/src/main/resources/application.properties
+++ b/backend/canim_ecommerce/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3307/canim_ecommerce?useSSL=false&a
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 spring.flyway.url=jdbc:mysql://localhost:3307/canim_ecommerce
