--- a/backend/canim_ecommerce/pom.xml
+++ b/backend/canim_ecommerce/pom.xml
@@ -153,6 +153,11 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 							<version>${org.lombok.version}</version>
+						</path>						
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
 						</path>
 						<path>
 							<groupId>org.mapstruct</groupId>
