--- a/backend/canim_ecommerce/src/main/resources/application.properties
+++ b/backend/canim_ecommerce/src/main/resources/application.properties
@@ -22,3 +22,10 @@ security.jwt.refresh-token-expiration-days=1
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+cloudinary.cloud-name=decuq7hw0
+cloudinary.api-key=941327942149117
+cloudinary.api-secret=E5Y69Z-9lXsbgek3IyifqsbtIbw
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
