update V8 and update supplier

--- a/backend/canim_ecommerce/src/main/resources/application.properties
+++ b/backend/canim_ecommerce/src/main/resources/application.properties
@@ -29,3 +29,6 @@ cloudinary.api-secret=E5Y69Z-9lXsbgek3IyifqsbtIbw
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+spring.flyway.clean-disabled=false
+
